--- a/MornUGUI.asmdef
+++ b/MornUGUI.asmdef
@@ -9,7 +9,8 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:520891f70526d454fa74c098f96aaedd",
         "GUID:7e65050672060cf498569ca551b894bf",
-        "GUID:c66c630efb44ca741a2f256ec143d2e7"
+        "GUID:c66c630efb44ca741a2f256ec143d2e7",
+        "GUID:9fb3b15b1474476cbe64c6bd63468fb6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
