--- a/MornUGUI.asmdef
+++ b/MornUGUI.asmdef
@@ -7,7 +7,8 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:e623bc35d2e040d4d81ac786178e2a6a",
-        "GUID:9fb3b15b1474476cbe64c6bd63468fb6"
+        "GUID:9fb3b15b1474476cbe64c6bd63468fb6",
+        "GUID:c66c630efb44ca741a2f256ec143d2e7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
