--- a/MornUGUI.asmdef
+++ b/MornUGUI.asmdef
@@ -6,7 +6,9 @@
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:e623bc35d2e040d4d81ac786178e2a6a",
-        "GUID:9fb3b15b1474476cbe64c6bd63468fb6"
+        "GUID:9fb3b15b1474476cbe64c6bd63468fb6",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:1a328b9299f874e829993ee74d070a37"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
